# old_ProPIP

./: README.md
dppip_3D_local_tree/: Alphabet.cpp  Alphabet.h  CMakeLists.txt  CSProfile.cpp  DistanceFactory.cpp  DistanceFactory.h  DistanceFactoryAlign.cpp  DistanceFactoryAlign.h  DistanceFactoryML.cpp  DistanceFactoryML.h  FindRoot.h  Graph.h  Model.h  ModelFactory.cpp  ModelFactory.h  ModelFactoryDarwin.cpp  ModelFactoryEcm.cpp  ModelFactoryEcm.h  ModelFactoryHKY85PIP.cpp  ModelFactoryHKY85PIP.h  ModelFactoryJCPIP.cpp  ModelFactoryJCPIP.h  ModelFactoryK80PIP.cpp  ModelFactoryK80PIP.h  ModelFactoryWag.cpp  ModelFactoryWagPIP.cpp  ModelFactoryWagPIP.h  PhyTree.h  ProgressiveAlignment.cpp  ProgressiveAlignment.h  ProgressivePIP.h  ProgressivePIP.h.txt  Sequence.h  Stockholm.cpp  gamma.h  main.cpp  main.h
